--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@ Dergelijke bijkomende beperkingen kunnen de volgende elementen bevatten:</p>
               </div>
             </div>
             <div class="region region--no-space-top">
-              <a href="/cms/ap/contactvoorkeuren/overview.jpg" target="_blank">
-                 <img src="/cms/ap/contactvoorkeuren/overview.jpg" />
+              <a href="html/overview.jpg" target="_blank">
+                 <img src="html/overview.jpg" />
               </a>
             </div>
             <div class="region region--no-space-top">
